# Hyperiso

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  2HDMC_8cpp.html  2HDMC_8h.html  2HDMC_8h_source.html  BlockAccessor_8cpp.html  BlockAccessor_8cpp__incl.map  BlockAccessor_8cpp__incl.md5  BlockAccessor_8h.html  BlockAccessor_8h__dep__incl.map  BlockAccessor_8h__dep__incl.md5  BlockAccessor_8h__incl.map  BlockAccessor_8h__incl.md5  BlockAccessor_8h_source.html  Block_8cpp.html  Block_8cpp__incl.map  Block_8cpp__incl.md5  Block_8h.html  Block_8h__dep__incl.map  Block_8h__dep__incl.md5  Block_8h__incl.map  Block_8h__incl.md5  Block_8h_source.html  C7_running.csv  CHANGELOG.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DockerFile  Formfactors_8h.html  Formfactors_8h__dep__incl.map  Formfactors_8h__dep__incl.md5  Formfactors_8h_source.html  General_8cpp.html  General_8cpp__incl.map  General_8cpp__incl.md5  (+1718 more)
BusinessLogic/: BDlnuDecay.h  BKstarDecay.cpp  BKstarDecay.h  BXsDecay.cpp  BXsDecay.h  BllDecay.cpp  BllDecay.h  BlnuDecay.h  CMakeLists.txt  Chi2Exp.cpp  Chi2Exp.h  Chi2Theo.cpp  Chi2Theo.h  Compound.cpp  Compound.h  DecayParent.cpp  DecayParent.h  Decays.h  ModelEvaluator.cpp  ModelEvaluator.h  Node.cpp  Node.h  Nuisance.cpp  Nuisance.h  ObsEvaluator.cpp  ObsEvaluator.h  ObsExp.h  ObsManager.cpp  ObsManager.h  Observable.cpp  Observable.h  ObservableFactory.cpp  ObservableFactory.h  ObservableInterface.h  ObservableStrategyChi2.cpp  ObservableStrategyChi2.h  Observables.h  chi2.cpp  chi2.h  main.cpp  (+1 more)
BusinessLogic/Decays/: BDlnuDecay.cpp  BDlnuDecay.h  BDstarlnuDecay.h  BKstarDecay.h  BXsDecay.cpp  BXsDecay.h  BllDecay.cpp  BllDecay.h  BlnuDecay.cpp  BlnuDecay.h
BusinessLogic/Observables/: B__Kstar_gamma.cpp  B__Kstar_gamma.h  Bd_mumu.cpp  Bd_mumu.h  Bs_mumu.cpp  Bs_mumu.h  Bu_taunu.cpp  Bu_taunu.h  Observables.cpp  Observables.h
Common/: CMakeLists.txt  Logger.cpp  Logger.h  Logger.tpp  LoggingException.h  Observer.cpp
Configured/: CMakeLists.txt  config.hpp.in
Core/: Block.h  BlockAccessor.h  CMakeLists.txt  General.cpp  General.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryManager.h  Observer.cpp  Parameter.cpp  Parameter.h  Parameters.cpp  Parameters.h  Parametersold.cpp  Parametersold.h  QCDHelper.cpp  QCDParameters.cpp  QCDParameters.h  main_core.cpp  main_parameters.cpp
DataBase/: CMakeLists.txt  JSonParameters.h  Json.cpp  Json.h  JsonParameters.cpp  JsonParameters.h  MappingDataBase.cpp  MappingDataBase.h  data.json  data_exp.json  data_parser100.json  data_parser200.json  data_theo.json  example.flha  json_parser  json_parser.cpp  json_parser.h  lha_blocks.cpp  lha_blocks.h  lha_elements.cpp  lha_elements.h  lha_reader.cpp  lha_reader.h  main_json.cpp  mainjson  mainjson.cpp  output.json  param_corr.json  param_cov.json  slha.cpp
DataBase/Entity/: lha_blocks.cpp  lha_blocks.h  lha_elements.cpp  lha_elements.h
DataBase/MartyTemplate/: C1.cpp  C10.cpp  C10mu.cpp  C3.cpp  C4.cpp  C5.cpp  C6.cpp  C7.cpp  C8.cpp  C9.cpp  C9mu.cpp  CP7.cpp  CP8.cpp  CP9.cpp  CPQ1mu.cpp  CQ1mu.cpp  C_T_tau.cpp  SM_wilson.csv  SM_wilson2.csv  bite  csv_helper.cpp  csv_helper.h
DataBase/MartyWilson/: SM_wilson.csv
DataBase/Pandas/: CMakeLists.txt  CSVOptions.h  CSVReader.cpp  CSVReader.h  DataFrame.cpp  DataFrame.h  DataFrame.tpp  Series.h  Series.tpp  main.cpp
DataBase/Params/: data_GENERAL.json  data_SM.json  data_SUSY.json  data_THDM.json
DataBase/Parser/: Parser.cpp  lha_parser.h
DataBase/Service/: lha_reader.cpp  lha_reader.h
DataBase/Spectrum/: testInputv3.slha  testinput_thdm.lha
DataBase/lha/: SLHA_1.lha  SLHA_10.lha  SLHA_11.lha  SLHA_2.lha  SLHA_3.lha  SLHA_4.lha  SLHA_5.lha  SLHA_6.lha  SLHA_7.lha  SLHA_8.lha  SLHA_9.lha  testInputv2.slha  testInputv3.slha
ExternalIntegration/: 2HDMC.cpp  CMakeLists.txt  Interface.cpp  SoftSusy.cpp  SoftSusy.h  main_softsusy.cpp
ExternalIntegration/MartyInterface/: CMakeLists.txt  CinematicExtractor.cpp  CinematicExtractor.h  CodeGenerator.cpp  CodeGenerator.h  CompilerStrategy.cpp  CompilerStrategy.h  Extractor.cpp  Extractor.h  FileNameManager.cpp  FileNameManager.h  GeneralModelModifier.cpp  GeneralModelModifier.h  GeneralNumModelModifier.cpp  GeneralNumModelModifier.h  GppCompilerStrategy.cpp  GppCompilerStrategy.h  IncludeManager.h  Interpreter.cpp  Interpreter.h  LineProcessor.h  MakeCompilerStrategy.cpp  MakeCompilerStrategy.h  MartyInterface.cpp  MartyInterface.h  ModelFileChecker.h  ModelModifier.h  ModelWriter.h  NumModelModifier.h  ParamWriter.h  SMModelModifier.cpp  SMModelModifier.h  SMParamSetter.cpp  SMParamSetter.h  TemplateManager.cpp  TemplateManager.h  main_marty.cpp  testcin.cpp
Hyperiso/Hyperiso/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.cfg  setup.py
Math/: CMakeLists.txt  Formfactors.h  Math.h  Matrix.h  bessel_function.cpp  exponential_integral.cpp  matrice.cpp  obs_math.cpp  others_functions.cpp  polylog.cpp  wilson_math.cpp
Math/MathBSM/: wilson_THDM.cpp
Math/Math_BSM/: Math_SUSY.h  Math_THDM.h
PhysicalModel/: CMakeLists.txt  Interpolator.h  MartyWilson.h  ModelInterface.h  ModelManager.cpp  Wilson.cpp  Wilson.h  WilsonGroup.cpp  WilsonGroup.h  WilsonInterface.h  WilsonManager.cpp  WilsonManager.h  Wilson_parameters.cpp  Wilson_parameters.h  Wilsonv2.cpp  Wilsonv2.h  main.cpp  main_phymod.cpp  running_mass.cpp
PhysicalModel/BSM/: Wilson_THDM.cpp  Wilson_THDM.h  (+13 more)
Python/: CMakeLists.txt  Phyperiso.py  requirements.txt  test_wilson.py  wow.py
Test/: CMakeLists.txt  CompareCsv.cpp  TestRareDecayCalculator.cpp  plot_matching_wilson.py  plot_wilson.py  spectrum2.slha  test2HDMC.cpp  testChi2.cpp  testInput.slha  testObservable.cpp  testParams.cpp  testParams.flha  testPrimeCQ.cpp  testPrimeCQSUSYWilson.cpp  testPrimeCQTHDMWilson.cpp  testPrimeCQWilson.cpp  testQCDParameters.cpp  testReader.cpp  testSMWilson.cpp  testSusyWilson.cpp  testTHDMWilson.cpp  testWilson.cpp
UserInterface/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  ObservableHandler.cpp  WilsonHandler.cpp  main.cpp  main_multithread.cpp
(+2763 files in other folders)
